added footer with styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- User input to choose city for weather display -->
         <form id="city-form">
           <label for="city-input">Enter a city:</label>
-          
+
           <br>
 
           <input type="text" id="city-input">
@@ -61,7 +61,17 @@
 
   </main>
 
-  <!-- My JavaScript -->
+<br><br><br><br><br><br><br><br><br>
+
+  <!-- My footer -->
+
+  <footer class="footer">
+    <section>
+      <article>&#169; Copyright, 2020, Eric Donohue</article>
+    </section>
+  </footer>
+
+  <!-- My JavaScript & JQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="script.js"></script>
